--- a/paper3_ref.bib
+++ b/paper3_ref.bib
@@ -1532,3 +1532,14 @@ year = {1993},
 
 
 
+
+@article{Ma201667,
+title = "Adaptive sliding mode control of tethered satellite deployment with input limitation ",
+journal = "Acta Astronautica ",
+volume = "127",
+number = "",
+pages = "67 - 75",
+year = "2016",
+author = "Zhiqiang Ma and Guanghui Sun",
+
+}
