--- a/paper3_ref.bib
+++ b/paper3_ref.bib
@@ -1543,3 +1543,55 @@ year = "2016",
 author = "Zhiqiang Ma and Guanghui Sun",
 
 }
+
+@ARTICLE{Tan2008General,
+author={S. C. Tan and Y. M. Lai and C. K. Tse},
+journal={IEEE Transactions on Industrial Electronics},
+title={General Design Issues of Sliding-Mode Controllers in DC-DC Converters},
+year={2008},
+volume={55},
+number={3},
+pages={1160-1174},
+month={March},
+}
+
+@Article{Hou2016,
+
+author="Hou, Huazhou
+and Zhang, Qingling
+and Zheng, Meng",
+
+title="Cluster synchronization in nonlinear complex networks under sliding mode control",
+journal="Nonlinear Dynamics",
+
+year="2016",
+
+volume="83",
+
+number="1",
+
+pages="739--749",
+
+
+}
+
+
+
+@ARTICLE{Loza2015Sensor,
+author={A. F. de Loza and J. Cieslak and D. Henry and J. D¨¢vila and A. Zolghadri},
+journal={IET Control Theory Applications},
+title={Sensor fault diagnosis using a non-homogeneous high-order sliding mode observer with application to a transport aircraft},
+year={2015},
+volume={9},
+number={4},
+pages={598-607},}
+
+@ARTICLE{Beak2016A,
+author={J. Baek and M. Jin and S. Han},
+journal={IEEE Transactions on Industrial Electronics},
+title={A New Adaptive Sliding-Mode Control Scheme for Application to Robot Manipulators},
+year={2016},
+volume={63},
+number={6},
+pages={3628-3637},
+month={June},}
